fix evolution scrolling on mobile and adjusted padding for sprites table

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
 
 body {
   background-color: rgb(248, 248, 248);
-
 }
 
 .progress-purple::-webkit-progress-value {
@@ -114,4 +113,18 @@ body {
 
 .dropdown-menu {
   z-index: 1;
+}
+
+.evolution-chart-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  overflow-x: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+.evolution-chart {
+  display: flex;
+  flex-wrap: nowrap;
 }
